<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.Setting">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtTitleSoundChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleSoundChild">

        <LinearLayout
            android:id="@+id/mLinearPremium"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sub_vip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_vertical"
                android:text="@string/premium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mLinearRate"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"

                android:background="@drawable/rate_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageView1"
                android:layout_alignBottom="@id/imageView1"
                android:layout_toRightOf="@id/imageView1"
                android:gravity="center_vertical"
                android:text="@string/rate_us" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearInviteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView1"

                android:background="@drawable/invite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageView2"
                android:layout_alignBottom="@id/imageView2"
                android:layout_toRightOf="@id/imageView2"
                android:gravity="center_vertical"
                android:text="@string/invite_friend" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mLinearPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"

                android:background="@drawable/policy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageView3"
                android:layout_alignBottom="@id/imageView3"
                android:layout_toRightOf="@id/imageView3"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>