<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.Home">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=""
        app:titleTextColor="@color/color_title_app">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="28sp"
            android:autoSizeMinTextSize="24sp"
            android:fontFamily="@font/kodchasan"
            android:text="@string/app_name"
            android:textColor="@color/color_title_app"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#C8C8C8" />

        <ProgressBar
            android:id="@+id/mProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:gravity="center"
            android:text="@string/no_internet_off"
            android:textColor="#FF0057"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btnLoad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mToolBar" />

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background"
            android:drawableStart="@drawable/baseline_refresh_24"
            android:padding="5dp"
            android:text="Refresh"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOff" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mToolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt1"
                style="@style/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/today_tot_sound"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRcyHot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/txt1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/mess_1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="centerInside"

                    android:text="@string/turning_daily_moments_into_hilarious_symphony_of_laughter"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/mess_2"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:text="@string/hitting_the_floor_in_laughter_while_your_friends_cry"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt2"
                style="@style/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Meme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mRcyHot" />

            <androidx.constraintlayout.utils.widget.MockView
                android:id="@+id/mockView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRcyMeme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/txt2" />

            <FrameLayout
                android:id="@+id/bannerAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt3"
                style="@style/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Fun sound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mRcyOff" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRcy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>